--- a/src/main/resources/static/css/transfert.css
+++ b/src/main/resources/static/css/transfert.css
@@ -1,7 +1,8 @@
 body {
-    margin: 30px auto;
-    width: 100vw;
-    height: 100vh;
+    margin: 0 auto;
+    padding: 0 30px;
+    width: 90vw;
+    height: 90vh;
     display: flex;
     justify-content: center;
     flex-direction: column;
@@ -13,6 +14,7 @@ body {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    margin: 20px 0 60px 0;
 }
 .link-logo {
 width: 50%;
@@ -24,3 +26,81 @@ width: 50%;
     justify-content: space-between;
     align-items: center;
 }
+
+.form-section {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin: 20px 0 60px 0;
+}
+
+#relations {
+  padding: 10px 20px;
+  color: gray;
+  border: 1px solid lightgray;
+  border-radius: 8px;
+}
+
+#btn-validate {
+  padding: 20px;
+  color: white;
+  background: blue;
+  font-size: 16px;
+  border-radius: 8px;
+}
+
+.input {
+    width: 25%;
+    padding: 10px 20px;
+}
+
+
+.transactions-section {
+    width: 88vw;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    height: 300px;
+    border:1px solid lightgrey;
+    border-radius: 8px;
+    margin: 0 10px;
+    padding: 10px 20px;
+}
+
+.transactions-title-container {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    margin: 15px 0;
+}
+
+.transactions-title-head {
+    font-weight: 700;
+    width: 33%;
+    text-align: left;
+}
+.transactions-title-right {
+    font-weight: 700;
+    width: 33%;
+    text-align: right;
+}
+
+.transactions-rows-container {
+    width: 100%;
+    margin: 10px 0;
+    padding-bottom: 5px;
+    display: flex;
+    justify-content: space-between;
+    border-bottom: 1px solid lightgrey;
+ }
+
+ .transactions-row-head {
+    width: 33%;
+    text-align: left;
+ }
+
+ .transactions-row-right {
+     width: 33%;
+     text-align: right;
+  }
