--- a/src/main/resources/templates/profil.html
+++ b/src/main/resources/templates/profil.html
@@ -1,12 +1,27 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link rel="stylesheet" th:href="@{/css/profil.css}"/>
 </head>
 <body>
-    <div>
-
+<div th:replace="~{fragments/menu :: menu}"></div>
+<div class="form-section">
+    <div class="form-row">
+        <div class="title-row">Username</div>
+        <input type="text" placeholder="@username" class="input-profil">
     </div>
+    <div class="form-row">
+        <div class="title-row">Mail</div>
+        <input type="text" placeholder="nom@domain.com" class="input-profil">
+    </div>
+    <div class="form-row">
+        <div class="title-row">Mot de passe</div>
+        <input type="text" placeholder="mot de passe" class="input-profil">
+    </div>
+
+    <button class="btn-validate">Modifier</button>
+</div>
 </body>
 </html>
