--- a/src/main/resources/templates/transfert.html
+++ b/src/main/resources/templates/transfert.html
@@ -6,22 +6,15 @@
     <link rel="stylesheet" th:href="@{/css/transfert.css}"/>
 </head>
 <body>
-<div class="header-container">
-    <div class="link-logo">Pay My Buddy</div>
-    <div class="links-container">
-        <div class="links">Transférer</div>
-        <div class="links">Profil</div>
-        <div class="links">Ajouter relation</div>
-        <div class="links">Se déconnecter</div>
-    </div>
-</div>
+<div th:replace="~{fragments/menu :: menu}"></div>
 <div class="form-section">
     <select id="relations" name="relations" value="Sélectionner une relation" class="input">
         <option value="relation_1">Relation1</option>
         <option value="relation_2">Relation2</option>
     </select>
     <input type="text" placeholder="Description" class="input-description input">
-    <input type="number" placeholder="0€" id="quantity" name="quantity" min="0" max="1000" step="1" value="0" class="input">
+    <input type="number" placeholder="0€" id="quantity" name="quantity" min="0" max="1000" step="1" value="0"
+           class="input">
     <button id="btn-validate">Payer</button>
 </div>
 <div class="transactions-section">
