encryption of pw when creating an account

--- a/src/main/resources/templates/inscription.html
+++ b/src/main/resources/templates/inscription.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" th:href="@{/css/inscription.css}"/>
 </head>
 <body>
-<form th:action="@{/connexion}" method="post" class="main-container">
+<form th:action="@{/inscription}" method="post" class="main-container">
     <button class="button btn-buddy" >Pay My Buddy</button>
     <input type="text" name="username" placeholder="username" required class="input-inscription" />
     <input type="email" name="email" placeholder="email" required  class="input-inscription"/>
