--- a/src/main/resources/templates/profil.html
+++ b/src/main/resources/templates/profil.html
@@ -10,15 +10,15 @@
 <div class="form-section">
     <div class="form-row">
         <div class="title-row">Username</div>
-        <input type="text" placeholder="@username" class="input-profil">
+        <input type="text" th:value="${user.username}" class="input-profil">
     </div>
     <div class="form-row">
         <div class="title-row">Mail</div>
-        <input type="text" placeholder="nom@domain.com" class="input-profil">
+        <input type="text" th:value="${user.email}" class="input-profil">
     </div>
     <div class="form-row">
         <div class="title-row">Mot de passe</div>
-        <input type="text" placeholder="mot de passe" class="input-profil">
+        <input type="text" placeholder="••••••••" class="input-profil">
     </div>
 
     <button class="btn-validate">Modifier</button>
