--- a/src/main/resources/static/css/connexion.css
+++ b/src/main/resources/static/css/connexion.css
@@ -29,6 +29,12 @@ body {
     margin: 60px 0px 20px 0px;
 }
 
+.btn-inscription {
+    background: blue;
+    color: white;
+    margin: 10px 0px 15px 0px;
+}
+
 .btn-buddy {
     background: goldenrod;
     color: white;
