--- a/src/main/resources/static/css/inscription.css
+++ b/src/main/resources/static/css/inscription.css
@@ -28,6 +28,12 @@ body {
     margin: 60px 0px 20px 0px;
 }
 
+.btn-connexion {
+    background: blue;
+    color: white;
+    margin: 10px 0px 10px 0px;
+}
+
 .btn-buddy {
     background: goldenrod;
     color: white;
