--- a/src/main/resources/templates/inscription.html
+++ b/src/main/resources/templates/inscription.html
@@ -13,6 +13,11 @@
     <input type="password" name="password" placeholder="mot de passe" required class="input-inscription" />
     <button class="button btn-validate" type="submit" >S'inscrire</button>
     <div th:if="${param.error}">Email ou mot de passe invalide</div>
+
+    <button class="button btn-connexion" type="button"
+            th:onclick="|window.location='@{/connexion}'|">
+        Déjà inscrit
+    </button>
 </form>
 </body>
 </html>
