--- a/src/main/resources/templates/fragments/menu.html
+++ b/src/main/resources/templates/fragments/menu.html
@@ -6,6 +6,12 @@
             <li class="links"><a th:href="@{/profil}">Profil</a></li>
             <li class="links"><a th:href="@{/relation}">Ajouter relation</a></li>
             <li class="links"><a th:href="@{/logout}">Se déconnecter</a></li>
+<!--            <li class="links">-->
+<!--                <form th:action="@/{logout}" method="post">-->
+<!--                    <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>-->
+<!--                    <button type="submit">Se déconnecter</button>-->
+<!--                </form>-->
+<!--            </li>-->
         </ul>
     </nav>
 </div>
