--- a/src/main/resources/templates/transfert.html
+++ b/src/main/resources/templates/transfert.html
@@ -9,22 +9,22 @@
 <div th:replace="~{fragments/menu :: menu}"></div>
 
 
-    <form th:action="@{/transfert}" method="post" class="form-section">
-        <!-- on peut garder user.id en hidden si besoin -->
-        <input type="hidden" name="userId" th:value="${user.id}" />
+<form th:action="@{/transfert}" method="post" class="form-section">
+    <!-- on peut garder user.id en hidden si besoin -->
+    <input type="hidden" name="userId" th:value="${user.id}"/>
 
-        <select name="connectionId" class="input">
-            <option value="" disabled selected>– Sélectionner une relation –</option>
-            <option th:each="uc : ${relations}"
-                    th:value="${uc.connection.id}"
-                    th:text="${uc.connection.username}">
-            </option>
-        </select>
-        <input type="text" placeholder="Description" name="description" class="input-description input"/>
-        <input type="number" placeholder="0€" id="quantity" name="amount"
-               min="0" max="1000" step="1" value="0" class="input"/>
-        <button id="btn-validate" type="submit">Payer</button>
-    </form>
+    <select name="connectionId" class="input">
+        <option value="" disabled selected>– Sélectionner une relation –</option>
+        <option th:each="uc : ${relations}"
+                th:value="${uc.connection.id}"
+                th:text="${uc.connection.username}">
+        </option>
+    </select>
+    <input type="text" placeholder="Description" name="description" class="input-description input"/>
+    <input type="number" placeholder="0€" id="quantity" name="amount"
+           min="0" max="1000" step="1" value="0" class="input"/>
+    <button id="btn-validate" type="submit">Payer</button>
+</form>
 
 <div class="transactions-section">
     <div class="transactions-title-head">Mes Transations</div>
@@ -33,10 +33,10 @@
         <div class="transactions-title-head">Description</div>
         <div class="transactions-title-right">Montant</div>
     </div>
-    <div class="transactions-rows-container">
-        <div class="transactions-row-head">Luc</div>
-        <div class="transactions-row-head">Billets de cinéma</div>
-        <div class="transactions-row-right">8€</div>
+    <div th:each="trans : ${transactions}" class="transactions-rows-container">
+        <div th:text="${trans.receiver.username}" class="transactions-row-head"></div>
+        <div th:text="${trans.description}" class="transactions-row-head"></div>
+        <div th:text="${trans.amount}" class="transactions-row-right"></div>
     </div>
 </div>
 
