--- a/src/main/resources/static/css/profil.css
+++ b/src/main/resources/static/css/profil.css
@@ -52,6 +52,12 @@ body {
     top: 50%;
     transform: translateY(-50%);
 }
+.message {
+    position: absolute;
+    top: 80%;
+    left: 50%;
+    transform: translateX(-50%) translateY(-50%);
+}
 
 .form-row {
     display: flex;
