--- a/src/main/resources/static/css/relation.css
+++ b/src/main/resources/static/css/relation.css
@@ -8,6 +8,7 @@ body {
     flex-direction: column;
     align-items: center;
     font-family: helvetica;
+    position:relative;
 }
 .header-container {
     width: 90vw;
@@ -67,7 +68,12 @@ body {
     padding: 10px 5px;
 }
 
-
+.message {
+    position: absolute;
+    top: 60%;
+    left: 50%;
+    transform: translateX(-50%) translateY(-50%);
+}
 #nav-section {
     width: 100%;
     display: flex;
