--- a/src/main/resources/templates/profil.html
+++ b/src/main/resources/templates/profil.html
@@ -7,21 +7,32 @@
 </head>
 <body>
 <div th:replace="~{fragments/menu :: menu}"></div>
-<div class="form-section">
+<form class="form-section" th:action="@{/profil}" method="post">
+
     <div class="form-row">
         <div class="title-row">Username</div>
-        <input type="text" th:value="${user.username}" class="input-profil">
+        <input type="text" th:value="${user.username}" name="username" class="input-profil">
     </div>
     <div class="form-row">
         <div class="title-row">Mail</div>
-        <input type="text" th:value="${user.email}" class="input-profil">
+        <input type="email" th:value="${user.email}" name="email" class="input-profil">
     </div>
     <div class="form-row">
         <div class="title-row">Mot de passe</div>
-        <input type="text" placeholder="••••••••" class="input-profil">
+        <input type="password" th:value="${user.password}" placeholder="••••••••" name="password" class="input-profil">
     </div>
 
-    <button class="btn-validate">Modifier</button>
+    <button class="btn-validate" type="submit">Modifier</button>
+</form>
+
+<!-- Afficher un message de succès si réussite -->
+<div th:if="${param.success}" class="message">
+    <p style="color: green;">Informations du profil modifiées avec succès.</p>
 </div>
+<!-- Afficher un message d'erreur si échec -->
+<div th:if="${param.error}" class="message">
+    <p style="color: red;">Une erreur est survenue.</p>
+</div>
+
 </body>
 </html>
