--- a/src/main/resources/static/css/profil.css
+++ b/src/main/resources/static/css/profil.css
@@ -28,18 +28,22 @@ body {
     align-items: center;
  }
 .link-logo {
-    width: 50%;
+width: 50%;
 }
 
 .links-container {
     width: 100%;
     display:flex;
-    justify-content: space-between;
+    justify-content: right;
     align-items: center;
     list-style-type: none;
 }
 .links-container a {
     text-decoration: none;
+}
+
+.links {
+    margin: 0 10px;
 }
 
 .form-section {
