--- a/src/main/resources/templates/connexion.html
+++ b/src/main/resources/templates/connexion.html
@@ -8,7 +8,7 @@
 <body>
 
 <form class="main-container" th:action="@{/connexion}" method="post">
-    <button class="button btn-buddy">Pay My Buddy</button>
+    <div class="button btn-buddy">Pay My Buddy</div>
     <input type="text" placeholder="Mail" name="username" class="input-connexion" required>
     <input type="password" placeholder="Mot de passe" name="password" class="input-connexion" required>
     <button class="button btn-validate" type="submit">Se connecter</button>
