--- a/src/main/resources/static/css/connexion.css
+++ b/src/main/resources/static/css/connexion.css
@@ -24,19 +24,22 @@ body {
 }
 
 .btn-validate {
-    background: blue;
+    background: rgb(32, 127, 238);
     color: white;
     margin: 60px 0px 20px 0px;
+    border: none;
+
 }
 
 .btn-inscription {
-    background: blue;
+    background: rgb(32, 127, 238);
     color: white;
     margin: 10px 0px 15px 0px;
+    border: none;
 }
 
 .btn-buddy {
-    background: goldenrod;
+    background: rgb(246, 159, 29);
     color: white;
     margin: 20px 0px 60px 0px;
 }
